# corvus

./: .gitignore  CONTRIBUTING.md  LICENSE  NODE_SETUP.md  README.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml
bot/: .env.example  Cargo.toml
bot/config/: default.toml
bot/src/: config.rs  main.rs
bot/src/monitoring/: metrics.rs  mod.rs  telegram.rs
bot/src/shared/: addresses.rs  flash_loan.rs  gas_oracle.rs  health_factor.rs  math.rs  mempool_monitor.rs  mod.rs  pool_discovery.rs  position_indexer.rs  position_store.rs  price_feed.rs  price_oracle.rs  rate_feed.rs  signing.rs  simulation.rs  submission.rs
bot/src/strategies/: cross_dex_arb.rs  flash_jit.rs  liquidation.rs  mod.rs  rate_arb.rs  tri_arb.rs
bot/tests/: integration.rs
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: FlashExecutor.sol
contracts/src/interfaces/: IAaveV3.sol  IAerodrome.sol  IBalancerVault.sol  IMorphoBlue.sol  IUniswapV3.sol
contracts/test/: FlashExecutor.t.sol
deploy/: corvus.service
monitoring/: docker-compose.yml  prometheus.yml
monitoring/grafana/dashboards/: corvus.json  dashboards.yml
scripts/: deploy.sh  sweep.sh  verify_addresses.sh
