[package]
name    = "corvus"
version = "1.0.0"
edition = "2021"

[dependencies]
# F-10 NOTE: ethers-rs v2.0 is deprecated and unmaintained. The audit requires
# migration to alloy >= 2.0 and revm >= 14.x. This is a breaking change affecting
# all Provider, Signer, and type usage throughout the codebase. Scheduled for v1.1.
# DO NOT add new ethers-rs usage — all new code should be written alloy-compatible.
# Tracking: https://github.com/gakonst/ethers-rs — migration guide at alloy.rs
ethers  = { version = "2.0", features = ["ws", "ipc", "rustls"] }
# Pinned to the v3 API the simulation engine targets (EVM struct, .database(),
# .transact_ref(), db::EthersDB). v8+ replaced this with the Evm builder API.
revm    = { version = "=3.5.0", features = ["ethersdb"] }
tokio   = { version = "1",   features = ["full"] }
futures = "0.3"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
uint         = "0.9"
num-traits   = "0.2"
num-integer  = "0.1"
reqwest      = { version = "0.12", features = ["json"] }
hex          = "0.4"
prometheus   = "0.13"
lazy_static  = "1.4"
once_cell    = "1.19"
axum         = "0.7"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow       = "1"
config       = "0.14"
dotenv       = "0.15"
dashmap      = "5"
parking_lot  = "0.12"
rayon        = "1.8"
crossbeam-channel = "0.5"
# SEC-04 / LOW-NEW-01: zero private key memory on drop
zeroize      = { version = "1.7", features = ["derive"] }

[profile.release]
opt-level     = 3
# F-11 FIX: Changed from lto = true (fat LTO) to lto = "thin".
# Fat LTO + codegen-units=1 can mean multi-hour compile times on this codebase.
# In production, a hotfix must be deployable quickly. Thin LTO provides ~95% of
# fat LTO's optimization benefit at a fraction of the compile time.
lto           = "thin"
codegen-units = 1
# AUDIT 6.1 FIX: was `panic = "abort"`, which skipped stack unwinding — so the panic
# hook (position flush) and SecretKey's zeroize-on-drop never ran on a crash. `unwind`
# restores both, and lets a panicking tokio task be isolated instead of killing the process.
panic         = "unwind"
